--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.0.0",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "plex-api": "^5.3.2"
   },
   "name": "plexbot",
   "version": "1.0.0",
